@@ -1,8 +1,8 @@
-package service.impl;
+package bsu.task1.service.impl;
 
-import entity.PhoneSubscriber;
-import service.PhoneSubscriberService;
-import validator.PhoneSubscriberValidator;
+import bsu.task1.entity.PhoneSubscriber;
+import bsu.task1.service.PhoneSubscriberService;
+import bsu.task1.validator.PhoneSubscriberValidator;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -14,24 +14,24 @@ public class PhoneSubscriberServiceImpl implements PhoneSubscriberService {
     private PhoneSubscriberValidator validator = new PhoneSubscriberValidator();
 
     @Override
-    public List<PhoneSubscriber> getSubscribersWithExcessiveLocalCalls(int minutesThreshold) {
+    public List<PhoneSubscriber> findSubscribersWithExcessiveLocalCalls(int minutesThreshold) {
         return subscribers.stream()
                 .filter(s -> s.getLocalCallMinutes() > minutesThreshold)
-                .collect(Collectors.toList());
+                .toList(); // Or Collectors.toList() for older Java versions
     }
 
     @Override
-    public List<PhoneSubscriber> getSubscribersWithInternationalCalls() {
+    public List<PhoneSubscriber> findSubscribersWithInternationalCalls() {
         return subscribers.stream()
                 .filter(s -> s.getInternationalCallMinutes() > 0)
-                .collect(Collectors.toList());
+                .toList(); // Or Collectors.toList() for older Java versions
     }
 
     @Override
-    public List<PhoneSubscriber> getSubscribersInAlphabeticalOrder() {
+    public List<PhoneSubscriber> findSubscribersInAlphabeticalOrder() {
         return subscribers.stream()
                 .sorted(Comparator.comparing(PhoneSubscriber::getLastName))
-                .collect(Collectors.toList());
+                .toList(); // Or Collectors.toList() for older Java versions
     }
 
     @Override
